
        }

    }

     \item \code{plot_RLum.Data.Spectrum()}{
        \itemize{
           \item The interactive plot option was broken with the last update of the
           package 'plotly'; fixed.

        }

    }


    \item \code{read_BIN2R()}{
        \itemize{

        \item If BIN-files are automatically imported the function skipped non BIN-files
        without crashing if it is used in combination with the argument \code{pattern},
        \item add new argument \code{irgnore.RECTYPE} to provide a solution for broken BIN-files
        are BIN-files with non documented entries. Furthermore the general behaviour for such
        cases had been optimised.
      }
     }


    \item \code{template_DRAC()}{
        \itemize{

        \item Fixed a typo in the column names (#28).

      }

     }


   \item \code{use_DRAC()}{
    \itemize{
       \item Now supports DRAC v1.2 and the newly introduced CSV input template.
       Older v1.1 excel sheet input templates are still supported, but users
       are highly encouraged to use the new CSV file.

       \item Columns in the output tables are now assigned proper classes (#27).
    }
  }

    }
  }

  \subsection{Internals}{

   \itemize{
      \item The internal function converting BIN-file curves to RLum.Data.Curve() objects had been
      optimised and, amongst others, now uses a function written using Rcpp to create the curve matrix.
      The conversion now works ca. two times faster,

      \item add \code{`[<-]`} method for \code{RLum.Data.Curve} objects,

      \item a hint on how to cite a function is now added automatically to every major function manual page,

      \item add 'magrittr' to the package dependencies (imports) to further support the usage of this amazing
      pipe operator,

      \item thanks to Johannes Friedrich this release introduces regular unit tests using
      the package 'testthat' to improve the code quality and stability.

    }

    }


  }