@@ -110,15 +110,69 @@
 
 }
 
-#++++++++++++++++++++++++++++
-#+ Scientific axis annotation        +
-#++++++++++++++++++++++++++++
+#+++++++++++++++++++++
+#+ .smoothing()      +
+#+++++++++++++++++++++
+
+#' Allows smmoothing of data based on the function zoo::rollmean
+#'
+#' The function just allows a direct and meaningfull access to the functionality of the zoo::rollmean()
+#' function. Arguments of the function are only partly valid.
+#'
+#' @param x \code{\link{numeric}} (\bold{required}): the object for which the smoothing should be
+#' applied.
+#'
+#' @param k \code{\link{integer}} (with default): window for the rolling mean; must be odd for rollmedian.
+#' If nothing is set k is set automatically
+#'
+#' @param fill \code{\link{numeric}} (with default): a vector defining the left and the right hand data
+#'
+#' @param align \code{\link{character}} (with default): specifying whether the index of the result should be
+#' left- or right-aligned or centered (default) compared to the rolling window of observations, allowed
+#' \code{"right"}, \code{"center"} and \code{left}
+#'
+#' @param method \code{\link{method}} (with default): defines which method should be applied for the
+#' smoothing: \code{"mean"} or \code{"median"}
+#'
+#' @return
+#' Returns the same object as the input and a warning table
+#'
+#' @section Function version: 0.1.0
+#'
+#' @author Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)
+#'
+#' @examples
+#'
+#' v <- 1:100
+#' .smoothing(v)
+#'
+#' @noRd
+.smoothing <- function(
+  x,
+  k = NULL,
+  fill = NA,
+  align = "right",
+  method = "mean") {
+
+  ##set k
+  if (is.null(k)) k <- ceiling(length(x) / 100)
+    if(method == "median" && k %%2 !=0) k <- k + 1
+
+  ##smooth data
+  zoo::rollmean(x, k = k, fill = fill, align = align)
+
+}
+
+
+#++++++++++++++++++++++++++++++
+#+ Scientific axis annotation +
+#++++++++++++++++++++++++++++++
 
 #' Bored of the 1e10 notation of large numbers in R? Already tried to force
 #' R to produce more fancy labels? Worry not, fancy_scientific() (written by
-#' Jack Aidley) is at your help! 
-#' 
-#' Source: 
+#' Jack Aidley) is at your help!
+#'
+#' Source:
 #' http://stackoverflow.com/questions/11610377/how-do-i-change-the-formatting-of-numbers-on-an-axis-with-ggplot
 #'
 #' @param l \code{\link{numeric}} (\bold{required}): a numeric vector, i.e. the
@@ -133,10 +187,10 @@
 #'
 #' @examples
 #'
-#' plot(seq(1e10, 1e20, length.out = 10), 
+#' plot(seq(1e10, 1e20, length.out = 10),
 #'      1:10,
 #'      xaxt = "n")
-#'      
+#'
 #' axis(1, at = axTicks(1),
 #'      labels = fancy_scientific(axTicks(1)))
 #'
